--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -35,9 +35,12 @@
 		</article>
 	</section>
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
+		<div class="modifier">
+			<h2>Mes Projets</h2>
+			<button> <img class="image-edit" width="17" height="17" src="https://img.icons8.com/pastel-glyph/64/create-new--v2.png" alt="create-new--v2"/>modifier</button>
+		</div>	
 		<div class="gallery" id="gallery">
-			
+		
 		</div>
 	</section>
 	<section id="contact">
