--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -8,54 +8,25 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
+	<link rel="stylesheet" href="./assets/login.css">
 	<link rel="stylesheet" href="./assets/style.css">
 </head>
-<style>
-.login,.formulaire{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.login{
-    padding-top: 50px;
-    align-items: center;
-}
-body{
-    background-color: #ffe4c412;
-}
-.formulaire{padding-top: 50px;
-gap:20px}
-#titre {color: #1D6154;}
-.block{ 
-display:flex;
-flex-direction: column;}
-.bouton{
-    padding: 10px;
-}
-.motdepasse{
-    color:black;
-}
-.input{
-    width: 300px;
-    height: 35px;
-    border: 1px solid transparent;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
-}
-footer{
-    bottom: 0;
-    right: 250px;
-    position: absolute;
-}
-</style>
+
 <body>
 <header>
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
 		<ul>
-			<li>projets</li>
-			<li>contact</li>
-			<li>login</li>
-			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+			<li>
+				<a href="#portfolio">projets</a>
+			</li>
+			<li>
+				<a href="#contact">contact</a>
+			</li>
+			<li>
+				<a href="login.html">login </a>
+			</li>
+			<li> <img src="./assets/icons/instagram.png" alt="Instagram"> </li>
 		</ul>
 	</nav>
 </header>
