--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -10,18 +10,24 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/login.css">
 	<link rel="stylesheet" href="./assets/style.css">
+	<script src="./logout.js"></script>
 </head>
 
 <body>
 <header>
-	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
+	<h1>
+		<a class="sophie-title-accueil" href="accueil.html">
+			Sophie Bluel 
+		</a>
+		<span>Architecte d'intérieur</span>
+	</h1>
 	<nav>
 		<ul>
 			<li>
-				<a href="#portfolio">projets</a>
+				<a href="accueil.html">projets</a>
 			</li>
 			<li>
-				<a href="#contact">contact</a>
+				<a href="accueil.html">contact</a>
 			</li>
 			<li>
 				<a href="login.html">login </a>
@@ -41,7 +47,7 @@
             <label>Mot de passe</label>
             <input class="input" type="password" name="" id="password">
         </div> 
-        <input class="bouton" type="submit" value="Se connecter"> 
+        <input class="bouton button-form-rempli" type="submit" value="Se connecter"> 
     </form>
     <a class="motdepasse" href="">Mot de passe oublié</a>
 
