--- a/FrontEnd/accueil.html
+++ b/FrontEnd/accueil.html
@@ -10,7 +10,7 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="stylesheet" href="./assets/popup.css">
-	<script src="functions.js"></script>
+	<script type="module" src="functions.js"></script>
 
 </head>
 
@@ -162,14 +162,15 @@
 	<section id="contact">
 		<h2>Contact</h2>
 		<p>Vous avez un projet ? Discutons-en !</p>
-		<form action="#" method="post">
+		<form id="fc" action="#" method="post">
 			<label for="name">Nom</label>
 			<input type="text" name="name" id="name">
 			<label for="email">Email</label>
 			<input type="email" name="email" id="email">
 			<label for="message">Message</label>
 			<textarea name="message" id="message" cols="30" rows="10"></textarea>
-			<input type="submit" value="Envoyer">
+			<input id="b" type="submit" value="Envoyer">
+			<p id="c"></p>
 		</form>
 	</section>
 </main>
